[package]
name = "nftmint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nftmint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# default = []
default = ["init-if-needed"]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
anchor-derive-accounts = {version = "0.22.1"}
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
spl-associated-token-account = "1.0.5"
spl-token = "3.3.0"

